# evm-sol-wa

./: .gitignore  Anchor.toml  README.md  package.json  spec.md  test_vector.json  tsconfig.json
programs/basic/: Cargo.toml
programs/evm_wallet/: Cargo.toml  ex.rs
programs/evm_wallet/src/: lib.rs
programs/evm_wallet/src/module/: constants.rs  error.rs  mod.rs  state.rs  tests.rs
programs/evm_wallet/src/module/instructions/: mod.rs  verify.rs
src/: evm-wallet-exports.ts  index.ts
src/front/: index.html  script.ts  style.css
src/utils/: ethereum.ts
tests/: evm_wallet.spec.ts
tests/utils/: ethereum.ts  vector.ts
